teg-envoy-gateway-manifest.yaml
---
# Source: teg-envoy-gateway-helm/charts/gateway-helm/templates/envoy-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway
  namespace: 'envoy-gateway-system'
  labels:
    control-plane: envoy-gateway
    helm.sh/chart: gateway-helm-v1.5.4
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: teg
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    control-plane: envoy-gateway
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: teg
  ports:
  - name: grpc
    port: 18000
    targetPort: 18000
  - name: ratelimit
    port: 18001
    targetPort: 18001
  - name: wasm
    port: 18002
    targetPort: 18002
  - name: metrics
    port: 19001
    targetPort: 19001
  - name: webhook
    port: 9443
    targetPort: 9443
---
# Source: teg-envoy-gateway-helm/templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teg-redis
  namespace: 'envoy-gateway-system'
  labels:
    helm.sh/chart: teg-envoy-gateway-helm-v1.5.1
    app.kubernetes.io/name: teg-envoy-gateway-helm
    app.kubernetes.io/instance: teg
    app.kubernetes.io/version: "v1.5.1"
    app.kubernetes.io/managed-by: Helm
    app: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app.kubernetes.io/name: teg-envoy-gateway-helm
    app.kubernetes.io/instance: teg
    app: redis
---
# Source: teg-envoy-gateway-helm/templates/teg-envoy-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teg-envoy-gateway
  namespace: 'envoy-gateway-system'
  labels:
    control-plane: teg-envoy-gateway
    helm.sh/chart: teg-envoy-gateway-helm-v1.5.1
    app.kubernetes.io/name: teg-envoy-gateway-helm
    app.kubernetes.io/instance: teg
    app.kubernetes.io/version: "v1.5.1"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    control-plane: teg-envoy-gateway
    app.kubernetes.io/name: teg-envoy-gateway-helm
    app.kubernetes.io/instance: teg
  ports:
  - name: sds
    port: 18000
    targetPort: 18000
---
# Source: teg-envoy-gateway-helm/charts/gateway-helm/templates/envoy-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-gateway
  namespace: 'envoy-gateway-system'
  labels:
    control-plane: envoy-gateway
    helm.sh/chart: gateway-helm-v1.5.4
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: teg
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: envoy-gateway
      app.kubernetes.io/name: gateway-helm
      app.kubernetes.io/instance: teg
  template:
    metadata:
      annotations:
        prometheus.io/port: "19001"
        prometheus.io/scrape: "true"
      labels:
        control-plane: envoy-gateway
        app.kubernetes.io/name: gateway-helm
        app.kubernetes.io/instance: teg
    spec:
      containers:
      - args:
        - server
        - --config-path=/config/envoy-gateway.yaml
        image: docker.io/envoyproxy/gateway:v1.5.4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: envoy-gateway
        ports:
        - containerPort: 18000
          name: grpc
        - containerPort: 18001
          name: ratelimit
        - containerPort: 18002
          name: wasm
        - containerPort: 19001
          name: metrics
        - name: webhook
          containerPort: 9443
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /config
          name: envoy-gateway-config
          readOnly: true
        - mountPath: /certs
          name: certs
          readOnly: true
      imagePullSecrets: []
      serviceAccountName: envoy-gateway
      terminationGracePeriodSeconds: 10
      volumes:
      - configMap:
          defaultMode: 420
          name: envoy-gateway-config
        name: envoy-gateway-config
      - name: certs
        secret:
          secretName: envoy-gateway
---
# Source: teg-envoy-gateway-helm/templates/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teg-redis
  namespace: 'envoy-gateway-system'
  labels:
    helm.sh/chart: teg-envoy-gateway-helm-v1.5.1
    app.kubernetes.io/name: teg-envoy-gateway-helm
    app.kubernetes.io/instance: teg
    app.kubernetes.io/version: "v1.5.1"
    app.kubernetes.io/managed-by: Helm
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: teg-envoy-gateway-helm
      app.kubernetes.io/instance: teg
      app: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teg-envoy-gateway-helm
        app.kubernetes.io/instance: teg
        app: redis
    spec:
      containers:
      - name: redis
        args:
        - --tls-port
        - "6379"
        - --port
        - "0"
        - --tls-ca-cert-file
        - /certs/ca.crt
        - --tls-cert-file
        - /certs/tls.crt
        - --tls-key-file
        - /certs/tls.key
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsUser: 999
          runAsGroup: 999
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        image: "redis:7.4.2"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /certs
          name: certs
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: redis-tls
---
# Source: teg-envoy-gateway-helm/templates/teg-envoy-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teg-envoy-gateway
  namespace: 'envoy-gateway-system'
  labels:
    control-plane: teg-envoy-gateway
    helm.sh/chart: teg-envoy-gateway-helm-v1.5.1
    app.kubernetes.io/name: teg-envoy-gateway-helm
    app.kubernetes.io/instance: teg
    app.kubernetes.io/version: "v1.5.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: teg-envoy-gateway
      app.kubernetes.io/name: teg-envoy-gateway-helm
      app.kubernetes.io/instance: teg
  template:
    metadata:
      labels:
        control-plane: teg-envoy-gateway
        app.kubernetes.io/name: teg-envoy-gateway-helm
        app.kubernetes.io/instance: teg
    spec:
      containers:
      - name: teg-envoy-gateway
        args:
        - serve
        image: tetrate/teg-envoy-gateway:v1.5.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
          seccompProfile:
            type: RuntimeDefault
      serviceAccountName: teg-envoy-gateway
      terminationGracePeriodSeconds: 10
---
# Source: teg-envoy-gateway-helm/templates/envoy-config.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: teg
  labels:
    helm.sh/chart: teg-envoy-gateway-helm-v1.5.1
    app.kubernetes.io/name: teg-envoy-gateway-helm
    app.kubernetes.io/instance: teg
    app.kubernetes.io/version: "v1.5.1"
    app.kubernetes.io/managed-by: Helm
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: teg-envoy-proxy
    namespace: 'envoy-gateway-system'
---
# Source: teg-envoy-gateway-helm/charts/gateway-helm/templates/envoy-proxy-topology-injector-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: 'envoy-gateway-topology-injector.envoy-gateway-system'
  annotations:
    "helm.sh/hook": pre-install, pre-upgrade
    "helm.sh/hook-weight": "-1"
  labels:
    app.kubernetes.io/component: topology-injector
    helm.sh/chart: gateway-helm-v1.5.4
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: teg
    app.kubernetes.io/version: "v1.5.4"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: topology.webhook.gateway.envoyproxy.io
    admissionReviewVersions: ["v1"]
    sideEffects: None
    clientConfig:
      service:
        name: envoy-gateway
        namespace: 'envoy-gateway-system'
        path: "/inject-pod-topology"
        port: 9443
    failurePolicy: Ignore
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods/binding"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - envoy-gateway-system
